<resources>
    <string name="app_name">Cool Movies</string>
    <string name="retry">Retry</string>
    <string name="desc_loading_indicator">Loading indicator image</string>
    <string name="text_plot_placeholder">Nullam tincidunt adipiscing enim. Etiam feugiat lorem non metus. In consectetuer turpis ut velit. Maecenas malesuada. Aliquam lobortis.</string>
    <string name="desc_poster_image">poster image</string>
    <string name="text_title">Title:</string>
    <string name="text_plot">Plot:</string>
    <string name="text_release_date">Release Date:</string>
    <string name="text_vote_average">Vote Average:</string>
    <string name="text_error_unknown_host_exception">Check internet connection</string>
    <string name="text_error_socket_timeout_exception">Internet might be slow, try again later</string>
    <string name="text_error_general">Something went wrong</string>
    <string name="text_genre">Genre</string>
</resources>